# darkness

./: .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  ConfigureChecks.cmake  Doxyfile.in  README.md  config.h.cmake  darknessRender.example.yaml  opdeRender.example.yaml  vcpkg.json  writedoc.py.in
proto/python/: CMakeLists.txt  test.cpp  test.py
src/base/: Array.h  BitArray.h  CMakeLists.txt  Callback.h  DarkCommon.h  DarknessException.cpp  DarknessException.h  DarknessMath.h  DarknessSingleton.h  FreeSpaceInfo.h  Iterator.h  LGPalette.cpp  LGPalette.h  MathTypes.cpp  Matrix3.h  Matrix4.h  MessageSource.h  NonCopyable.h  Plane.h  PrioritizedMessageSource.h  Quaternion.h  RGBAQuad.h  SharedPtr.h  StringTokenizer.h  ValueChangeRequest.h  Vector2.h  Vector3.h  format.h  tracer.cpp  tracer.h
src/base/compat/: integers.h
src/base/console/: ConsoleBackend.cpp  ConsoleBackend.h  ConsoleCommandListener.cpp  ConsoleCommandListener.h
src/base/dyntype/: DTHelpers.h  DataStorage.cpp  DataStorage.h  RawDataStorage.h  Serializer.cpp  Serializer.h  SingleFieldDataStorage.h  StructDataStorage.h  Variant.cpp  Variant.h
src/base/file/: File.cpp  File.h  FileCompat.cpp  FileCompat.h  FileGroup.cpp  FileGroup.h  darkdb.cpp  darkdb.h
src/base/loaders/: BinFormat.h  FonFormat.cpp  FonFormat.h  ManualBinFileLoader.cpp  ManualBinFileLoader.h  ManualFonFileLoader.cpp  ManualFonFileLoader.h
src/base/logger/: DarknessLogConnector.cpp  DarknessLogConnector.h  filelog.cpp  filelog.h  logger.cpp  logger.h  stdlog.cpp  stdlog.h
src/base/servicemanager/: DarknessService.cpp  DarknessService.h  DarknessServiceFactory.h  DarknessServiceManager.cpp  DarknessServiceManager.h
src/base/threading/: WorkerThreadPool.cpp  WorkerThreadPool.h
src/bindings/: CMakeLists.txt  ConfigServiceBinder.cpp  ConfigServiceBinder.h  DataFieldDescIteratorBinder.cpp  DataFieldDescIteratorBinder.h  DatabaseServiceBinder.cpp  DatabaseServiceBinder.h  DrawServiceBinder.cpp  DrawServiceBinder.h  DrawSheetBinder.cpp  DrawSheetBinder.h  DrawSourceBinder.cpp  DrawSourceBinder.h  FontDrawSourceBinder.cpp  FontDrawSourceBinder.h  GUIServiceBinder.cpp  GUIServiceBinder.h  InheritQueryResultBinder.cpp  InheritQueryResultBinder.h  InheritServiceBinder.cpp  InheritServiceBinder.h  InputServiceBinder.cpp  InputServiceBinder.h  LinkQueryResultBinder.cpp  LinkQueryResultBinder.h  LinkServiceBinder.cpp  LinkServiceBinder.h  LoopServiceBinder.cpp  LoopServiceBinder.h  ObjectServiceBinder.cpp  ObjectServiceBinder.h  PropertyServiceBinder.cpp  PropertyServiceBinder.h  PythonCallback.h  PythonStruct.h  RelationBinder.cpp  RelationBinder.h  RenderedImageBinder.cpp  RenderedImageBinder.h  RenderedLabelBinder.cpp  (+11 more)
src/main/: AudioCaptureSpin.h  AutoFlyTour.h  AutoRunTour.h  BinMeshParser.h  CMakeLists.txt  CRFModelLoader.h  CRFTextureLoader.h  CellGeometry.h  DTypeSizeParser.h  Darkness.cpp  DarknessCommon.h  DarknessDocGen.cpp  DarknessHeadless.cpp  DarknessRender.cpp  DarknessRenderInit.h  DarknessRenderState.h  DarknessRendererCore.h  DarknessRendererExtended.h  DarknessScript.cpp  DebugConsole.h  DynamicLightList.h  FrobSystem.h  FunctionalLoopClient.h  GIFDecoder.h  GameLoadState.cpp  GameLoadState.h  GamePlayState.cpp  GamePlayState.h  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  GrabSystem.h  LightingSystem.h  LightmapAtlas.h  ObjectIllumination.h  ObjectPropParser.h  OgreFixedZip.cpp  OgreFixedZip.h  OpdeHeadless.cpp  (+18 more)
src/services/: CMakeLists.txt  ServiceCommon.h
src/services/ai/: AIHearingService.cpp  AIHearingService.h
src/services/audio/: AIHearingData.h  AcousticMaterials.h  AmbientSoundManager.cpp  AmbientSoundManager.h  AudioDSPChain.cpp  AudioDSPChain.h  AudioLog.h  AudioMetering.h  AudioOcclusion.cpp  AudioOcclusion.h  AudioService.cpp  AudioService.h  AudioUnits.h  CRFSoundLoader.h  ConvolutionWorkerPool.cpp  ConvolutionWorkerPool.h  DirectSimulator.cpp  DirectSimulator.h  EnvSoundDatabase.cpp  EnvSoundDatabase.h  HybridRouteGraph.h  LatencyHistogram.h  PathingSimulator.cpp  PathingSimulator.h  ProbeFile.h  ProbeManager.cpp  ProbeManager.h  ReflectionSimulator.cpp  ReflectionSimulator.h  RingOutputMixer.cpp  RingOutputMixer.h  SchemaParser.cpp  SchemaParser.h  SchemaPropertyOverrides.h  SchemaSamplesChunk.cpp  SchemaSamplesChunk.h  SchemaTypes.h  SoundPropagation.cpp  SoundPropagation.h  SpeechDatabase.cpp  (+9 more)
src/services/camera/: CameraService.cpp  CameraService.h
src/services/config/: ConfigService.cpp  ConfigService.h
src/services/database/: DatabaseCommon.h  DatabaseService.cpp  DatabaseService.h
src/services/draw/: DrawBuffer.cpp  DrawBuffer.h  DrawCommon.cpp  DrawCommon.h  DrawOperation.cpp  DrawOperation.h  DrawService.cpp  DrawService.h  DrawSheet.cpp  DrawSheet.h  FontDrawSource.cpp  FontDrawSource.h  RenderedImage.cpp  RenderedImage.h  RenderedLabel.cpp  RenderedLabel.h  RenderedRect.cpp  RenderedRect.h  TextureAtlas.cpp  TextureAtlas.h
src/services/game/: GameService.cpp  GameService.h
src/services/gui/: ConsoleGUI.cpp  ConsoleGUI.h  GUIService.cpp  GUIService.h
src/services/inherit/: ArchetypeInheritor.cpp  ArchetypeInheritor.h  CachedInheritor.cpp  CachedInheritor.h  InheritCommon.h  InheritService.cpp  InheritService.h  NeverInheritor.cpp  NeverInheritor.h
src/services/input/: InputCommon.h  InputEventMapper.cpp  InputEventMapper.h  InputService.cpp  InputService.h
src/services/light/: LightService.cpp  LightService.h
src/services/link/: LinkCommon.h  LinkService.cpp  (+3 more)
tests/: CMakeLists.txt  test_acoustic_materials.cpp  test_ai_hearing_data.cpp  test_ai_hearing_service.cpp  test_env_sound_database.cpp  test_hybrid_route_graph.cpp  test_object_illumination.cpp  test_object_state.cpp  test_probe_file.cpp  test_render_config.cpp  test_schema_parser.cpp  test_schema_property_overrides.cpp  test_schema_samples_chunk.cpp  test_sim_systems.cpp  test_speech_database.cpp  test_speech_selector.cpp  test_spot_ambient_envelope.cpp  test_steam_audio_pathing.cpp  test_subsource_slots.cpp  test_typed_properties.cpp  test_worker_thread_pool.cpp  test_world_query.cpp
(+194 files in other folders)
