include_directories(
    ${ODE_INCLUDE_DIR}
    ${OGRE_INCLUDE_DIR}
    ${DARKNESS_BINARY_DIR}
    ${DARKNESS_BASE_INCLUDES}
    ${DARKNESS_SERVICE_INCLUDES}
    ${PYTHON_INCLUDE_PATH}
    ${DARKNESS_SOURCE_DIR}/src/scenemanager
    ${DARKNESS_SOURCE_DIR}/src/main
    ${DARKNESS_SOURCE_DIR}/src/base
    ${DARKNESS_SOURCE_DIR}/src/base/console
    ${DARKNESS_SOURCE_DIR}/src/base/compat
    ${DARKNESS_SOURCE_DIR}/src/base/dyntype
    ${DARKNESS_SOURCE_DIR}/src/base/file
    ${DARKNESS_SOURCE_DIR}/src/base/loaders
    ${DARKNESS_SOURCE_DIR}/src/base/logger
    ${DARKNESS_SOURCE_DIR}/src/base/servicemanager
    ${DARKNESS_SOURCE_DIR}/src/scenemanager
    ${DARKNESS_SOURCE_DIR}/src/main
    ${DARKNESS_SOURCE_DIR}/src/compat
    ${DARKNESS_SOURCE_DIR}/src/bindings
    ${DARKNESS_SOURCE_DIR}/src/services
)

add_library(DarknessPython OBJECT
    bindings.cpp
    bindings.h
    ConfigServiceBinder.cpp
    ConfigServiceBinder.h
    DatabaseServiceBinder.cpp
    DatabaseServiceBinder.h
    DataFieldDescIteratorBinder.cpp
    DataFieldDescIteratorBinder.h
    DrawServiceBinder.cpp
    DrawServiceBinder.h
    DrawSheetBinder.cpp
    DrawSheetBinder.h
    DrawSourceBinder.cpp
    DrawSourceBinder.h
    FontDrawSourceBinder.cpp
    FontDrawSourceBinder.h
    GUIServiceBinder.cpp
    GUIServiceBinder.h
    InheritQueryResultBinder.cpp
    InheritQueryResultBinder.h
    InheritServiceBinder.cpp
    InheritServiceBinder.h
    InputServiceBinder.cpp
    InputServiceBinder.h
    LinkQueryResultBinder.cpp
    LinkQueryResultBinder.h
    LinkServiceBinder.cpp
    LinkServiceBinder.h
    LoopServiceBinder.cpp
    LoopServiceBinder.h
    ObjectServiceBinder.cpp
    ObjectServiceBinder.h
    PropertyServiceBinder.cpp
    PropertyServiceBinder.h
    PythonCallback.h
    PythonStruct.h
    RelationBinder.cpp
    RelationBinder.h
    RenderedImageBinder.cpp
    RenderedImageBinder.h
    RenderedLabelBinder.cpp
    RenderedLabelBinder.h
    RootBinder.cpp
    RootBinder.h
    ServiceBinder.cpp
    ServiceBinder.h
    StringIteratorBinder.cpp
    StringIteratorBinder.h
    TextureAtlasBinder.cpp
    TextureAtlasBinder.h
)
